--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,14 +1,15 @@
 add_subdirectory(Catch2)
 
 add_executable(
-    sort-test
+    lib-algo-ds-test
         sort_test.cc
+        bst_test.cc
 )
 
 target_link_libraries(
-    sort-test
+    lib-algo-ds-test
         Catch2::Catch2
         algo-ds
 )
 
-add_test(sort sort-test)
+add_test(sort lib-algo-ds-test)
