--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(
         sort/selection.cc
         trees/bst.cc
         trees/avl.cc
+        trees/rbtree.cc
 )
 
 target_include_directories(
