Add edge weighted graph

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -9,6 +9,9 @@ add_library(
         tree/bst.cc
         tree/avl.cc
         disjointset.cc
+
+        graph/edge.cc
+        graph/graph.cc
 )
 
 target_include_directories(
