Add mst construction using Primm's lazy algorithm

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -13,6 +13,7 @@ add_library(
         graph/edge.cc
         graph/graph.cc
         graph/kruskalmst.cc
+        graph/primmmstlazy.cc
 )
 
 target_include_directories(
