--- a/leetcode-august/CMakeLists.txt
+++ b/leetcode-august/CMakeLists.txt
@@ -3,6 +3,7 @@ add_executable(
     leetcode_test
         detect_capital_test.cpp
         design_hashset_test.cpp
+        valid_palindrome_test.cpp
 )
 
 target_link_libraries(
