--- a/leetcode-august/CMakeLists.txt
+++ b/leetcode-august/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable(
         detect_capital_test.cpp
         design_hashset_test.cpp
         valid_palindrome_test.cpp
+        add_and_search_word_ds_test.cpp
 )
 
 target_link_libraries(
