--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,4 @@ enable_testing()
 add_subdirectory(test)
 add_subdirectory(lib)
 add_subdirectory(leetcode-august)
-
+add_subdirectory(leetcode-september)
